# skin-cancer-classification

./: .gitignore  README.md  config.py  config.yaml  config_loader.py  experiment.py  hello.py  main.py  main2.py  main3.py  model_setup.py  models.py  preprocessing.py  pyproject.toml  training.py  utils.py  view.ipynb  visualization.py
dataset/: data.yaml  view2.ipynb
dataset/labels/: train.cache  val.cache
mlruns/0/: meta.yaml
mlruns/517447168040077570/: meta.yaml
mlruns/517447168040077570/58ede6d14b9941aba02aec514488c35a/: meta.yaml
mlruns/517447168040077570/58ede6d14b9941aba02aec514488c35a/artifacts/: skin_lesion_model.pth
mlruns/517447168040077570/58ede6d14b9941aba02aec514488c35a/metrics/: akiec_f1-score  akiec_precision  akiec_recall  bcc_f1-score  bcc_precision  bcc_recall  bkl_f1-score  bkl_precision  bkl_recall  df_f1-score  df_precision  df_recall  final_test_accuracy  final_test_loss  final_train_accuracy  final_train_loss  (+12 more)
mlruns/517447168040077570/f3c35edde0fc46dca9600578d5e91f1a/: meta.yaml
mlruns/models/baisc-cnn/: meta.yaml
runs/classify/skin_cancer_classifier/: args.yaml
runs/classify/skin_cancer_classifier2/: args.yaml
runs/classify/skin_cancer_classifier3/: args.yaml
runs/detect/skin_cancer_model/: args.yaml
runs/detect/skin_cancer_model2/: args.yaml
runs/detect/skin_cancer_model3/: args.yaml
runs/detect/skin_cancer_model4/: args.yaml  results.csv
runs/detect/skin_cancer_model5/: args.yaml  results.csv
runs/detect/skin_cancer_model6/: args.yaml  results.csv
runs/detect/skin_cancer_model7/: args.yaml  results.csv
(+41 files in other folders)
